modified and updated files

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,7 @@
     </head>
     <style>
       body {
-        background-image: url("{{ url_for('static', filename='campus_2.jpg') }}");
+        background-image: url("{{ url_for('static', filename='campus-2.jpg') }}");
         background-repeat: repeat-y;
         background-size: 100% auto;
       }
@@ -237,5 +237,5 @@
         })();
         </script>
   </body> -->
-  
+
 </html>
